[tool.poetry]
name = "psychological-space-bot"
version = "0.1.0"
description = "Enterprise-grade scalable Telegram bot and admin SaaS platform for a psychological space"
authors = ["Antigravity <antigravity@google.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.7.0"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
asyncpg = "^0.30.0"
redis = "^5.0.4"
pydantic = "^2.7.2"
pydantic-settings = "^2.2.1"
structlog = "^24.2.0"
apscheduler = "^3.10.4"
httpx = "^0.27.0"
google-api-python-client = "^2.131.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.0"
alembic = "^1.13.1"
pyjwt = "^2.8.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
cryptography = "^42.0.7"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
black = "^24.4.2"
ruff = "^0.4.5"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "RUF"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["app/database/migrations/"]
